--- a/render.yaml
+++ b/render.yaml
@@ -12,4 +12,4 @@ services:
       - key: WEB_CONCURRENCY
         value: 4
       - key: DJANGO_SETTINGS_MODULE
-        value: expense_tracker.settings 
+        value: expense_tracker.expense_tracker.settings 
