--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: expense-tracker
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn expense_tracker.expense_tracker.wsgi:application
+    startCommand: gunicorn expense_tracker.wsgi:application
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.16
@@ -12,4 +12,4 @@ services:
       - key: WEB_CONCURRENCY
         value: 4
       - key: DJANGO_SETTINGS_MODULE
-        value: expense_tracker.expense_tracker.settings 
+        value: expense_tracker.settings 
