--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: expense-tracker
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn expense_tracker.wsgi:application
+    startCommand: gunicorn cd expense_tracker && expense_tracker.wsgi:application
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.16
